--- a/styles.css
+++ b/styles.css
@@ -25,18 +25,19 @@ p {
 }
 
 button {
-    background-color: #28a745;
-    color: white;
-    border: none;
+    background-color: white; /* Fondo blanco */
+    color: #28a745; /* Color del texto (verde) */
+    border: 2px solid #28a745; /* Borde verde */
     padding: 15px 30px;
     font-size: 1em;
     cursor: pointer;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
+    border-radius: 25px; /* Bordes redondeados */
+    transition: background-color 0.3s ease, color 0.3s ease; /* Transición suave para el color */
 }
 
 button:hover {
-    background-color: #218838;
+    background-color: #28a745; /* Fondo verde al pasar el mouse */
+    color: white; /* Texto blanco al pasar el mouse */
 }
 
 .gallery {
