--- a/styles.css
+++ b/styles.css
@@ -204,3 +204,14 @@ button:hover {
 .site-footer .contact-info a:hover {
     text-decoration: underline; /* Subrayado en hover */
 }
+hr {
+
+    border: 0;
+
+    height: 2px;
+
+    background: #333;
+
+    background-image: linear-gradient(to right, #ccc, #333, #ccc);
+
+}
